src/deploy/kubernetes/infra/06_addons/oidc/oauth2-proxy/tenant-0/application/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${_Values_app_name}
  namespace: ${_Release_namespace}
  labels:
    app: ${_Values_app_name}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${_Values_app_name}
  template:
    metadata:
      labels:
        app: ${_Values_app_name}
    spec:
      containers:
        - name: ${_Values_app_name}
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          ports:
            - containerPort: 4180
              protocol: TCP
          args:
            - --email-domain=*
            - --upstream=file:///dev/null
            - --http-address=0.0.0.0:4180
            - --reverse-proxy=true
            - --pass-user-headers
            - --proxy-prefix=/${_Values_ingress_name}
