src/deploy/kubernetes/infra/06_addons/oidc/oauth2-proxy/tenant-0/application/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${_Values_root_name}-ingress
  namespace: ${_Release_namespace}
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  tls:
    - hosts:
        - ${_Values_host_name}
      secretName: server-certificate-secret
  rules:
    - host: ${_Values_host_name}
      http:
        paths:
          - path: /${_Values_ingress_name}
            pathType: Prefix
            backend:
              service:
                name: ${_Values_app_name}
                port:
                  name: http
